policy-library/policies/templates/gcp_cloud_armor_enable_json_parsing_v1.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gcpcloudarmorenablejsonparsingconstraintv1
spec:
  crd:
    spec:
      names:
        kind: GCPCloudArmorEnableJsonParsingConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: validation.resourcechange.terraform.cloud.google.com
      rego: |
            package templates.gcp.GCPCloudArmorEnableJsonParsingConstraintV1

            violation[{
            	"msg": msg,
            }] {
            	resource := input.review
              allowed_json_parsing_types := input.parameters.allowed_json_parsing_types
              json_parsing_type_set := {x | x = allowed_json_parsing_types[_]}
            	resource.type == "google_compute_security_policy"
            	msg := check_json_parsing(resource, json_parsing_type_set)
            }

            check_json_parsing(resource, json_parsing_type_set) = msg {
                count({resource.change.after.advanced_options_config[_].json_parsing} & json_parsing_type_set) == 0
                msg := sprintf("Violation: JSON Parsing is disabled for resource %s.%s. The JSON parsing allowed values %s", [resource.type, resource.name, json_parsing_type_set])
            }
