policy-library/policies/templates/gcp_cloud_armor_rate_limit_v1.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gcpcloudarmorratelimitconstraintv1
spec:
  crd:
    spec:
      names:
        kind: GCPCloudArmorRateLimitConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: validation.resourcechange.terraform.cloud.google.com
      rego: |
            package templates.gcp.GCPCloudArmorRateLimitConstraintV1

            violation[{
            	"msg": msg,
            }] {
            	resource := input.review
            	resource.type == "google_compute_security_policy"
            	msg := check_rate_limit(resource)
            }

            check_rate_limit(resource) = msg {
                resource.change.after.rule[_].rate_limit_options == []
                msg := sprintf("Violation: Rate Limit Options are not specified for resource %s.%s",[resource.type, resource.name])
            }
