policy-library/policies/templates/gcp_google_api_key_restrictions.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gcpapikeyrestrictionconstraintv1
spec:
  crd:
    spec:
      names:
        kind: GCPAPIKeyRestrictionConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}

  targets:
    - target: validation.resourcechange.terraform.cloud.google.com
      rego: |
        package templates.gcp.GCPAPIKeyRestrictionConstraintV1
        
        violation[{
          "msg": msg,
          "details": metadata,
        }] {
          resource := input.review
          resource.type == "google_apikeys_key"
          msg := check_restrictions(resource)
          metadata := {
            "ResourceName" : resource.name
          }
        }
        
        check_restrictions(resource) = msg {
          resource.change.after.restrictions == []
          msg := sprintf("Can't create Api Key without restriction block for resource, %s", [resource.name])
        }
