policy-library/policies/templates/gcp_vpc_flow_logs_enabled_with_no_metadata.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gcpvpcflowlogsenabledconstraintv1
spec:
  crd:
    spec:
      names:
        kind: GCPVPCFlowLogsEnabledConstraintV1
      validation:
        openAPIV3Schema:
          properties:
            metadata:
              description: "Can only be specified if VPC flow logging for this subnetwork is enabled. Configures whether metadata fields should be added to the reported VPC flow logs. Default value is INCLUDE_ALL_METADATA. Possible values are EXCLUDE_ALL_METADATA, INCLUDE_ALL_METADATA, and CUSTOM_METADATA."
              type: string
  targets:
    - target: validation.resourcechange.terraform.cloud.google.com
      rego: |
        package templates.gcp.GCPVPCFlowLogsEnabledConstraintV1
        
        violation[{
          "msg": msg,
          "details": metadata,
        }] {
          resource := input.review
          resource.type == "google_compute_subnetwork"
          params := input.parameters
          msg := check_vpc_flow_logs( resource, params )
          metadata := {
            "Resource_Name" : resource.name
          }
        }
        
        check_vpc_flow_logs(resource, params) = msg { 
          resource.change.after.log_config == []
          msg := sprintf("VPC log config us not set, enable VPC logging for resource: %s", [resource.name])
        }
        
        check_vpc_flow_logs(resource, params) = msg {
          resource.change.after.log_config[0].metadata == params.metadata
          msg := sprintf("VPC log metadata is configured with INCLUDE_ALL_METADATA, Possible value EXCLUDE_ALL_METADATA for resource: %s", [resource.name])
        }
